add kotac semanticsÂ

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -34,6 +34,7 @@
 \newcommand{\HFC}{HFC}
 \newcommand{\Scafi}{{\sc{}ScaFi}\xspace}
 \newcommand{\Kotac}{{\sc{}KotAC}\xspace}
+\newcommand{\FKotac}{{\sc{}FKotAC}\xspace}
 \newcommand{\FSCAFI}{{\sc{}FScaFi}\xspace}
 \newcommand{\FSCAFIi}{{\sc{}FScaFi$'$}\xspace}
 \newcommand{\FeatherweightSCAFI}{{\sc{}Featherweight ScaFi}\xspace}
@@ -89,7 +90,9 @@ body}}
 
 \newcommand{\spawnK}{\mathtt{spawn}}
 \newcommand{\defK}{\mathtt{def}}
+\newcommand{\funK}{\mathtt{fun}}
 \newcommand{\nbrK}{\mathtt{nbr}}
+\newcommand{\alignK}{\mathtt{align}}
 \newcommand{\repK}{\mathtt{rep}}
 \newcommand{\shareK}{\mathtt{share}}
 \newcommand{\fifK}{\mathtt{if}}
