--- a/src/20-aggregate-programming.tex
+++ b/src/20-aggregate-programming.tex
@@ -336,7 +336,7 @@ Rule \ruleNameSize{[E-SHARE]} models a $\mathtt{share}$-expression, which collec
 
 Figure \ref{fig:networkSemantics} defines the operational semantics for the evaluation of whole networks, i.e. it models the distributed evolution of the computational fields over time. $\Field$ is map from device identifiers to value-tree environments, modelling the overhall status of the devices at a given time. $\Topo$ models the topology of the network as a map from device identifiers to sets of identifiers of the neigbouring devices. $\Sens$ models the sensors state as map from device identifiers to the local sensor state of the device. $\Envi$ is a couple of topology and sensor state modelling the system's environment. $\Cfg$ models the whole network configuration as a couple of an environment $\Envi$ and a status field $\Field$.
 
-The network semantics is given in terms of small-steps transitions of the king $\nettran{\Cfg}{\act}{\Cfg'}$ where $\act$ can be either a device identifier $\deviceId$ representing its firing or the label $\envact$ representing any environment change. The following notation is used.  $\filter(\cdot)$ is a filtering operation that clears old stored values from the value-tree environements in $\Field$, usually based on space/time tags attached to value-trees. $\envmap{\overline\deviceId}{\Trees}$ denote the map sending each device identifier in $\overline\deviceId$ to the same value-tree environment $\Trees$. $\mapupdate{\Trees_0}{\Trees_1}$ denote the value-tree environment with domain $\domof{\Trees_0} \cup \domof{\Trees_1}$ coinciding with $\Trees_1$ in the domain of $\Trees_1$ and with $\Trees_0$ otherwise. $\Field_0[\Field_1]$ denotes the status field with the same domain as $\Field_0$ made of $\envmap{\deviceId}{\mapupdate{\Field_0(\deviceId)}{\Field_1(\deviceId)}}$ for all $\deviceId$ in the domain of $\Field_1$, $\envmap{\deviceId}{\Field_0(\deviceId)}$ otherwise.
+The network semantics is given in terms of small-steps transitions of the kind $\nettran{\Cfg}{\act}{\Cfg'}$ where $\act$ can be either a device identifier $\deviceId$ representing its firing or the label $\envact$ representing any environment change. The following notation is used.  $\filter(\cdot)$ is a filtering operation that clears old stored values from the value-tree environements in $\Field$, usually based on space/time tags attached to value-trees. $\envmap{\overline\deviceId}{\Trees}$ denote the map sending each device identifier in $\overline\deviceId$ to the same value-tree environment $\Trees$. $\mapupdate{\Trees_0}{\Trees_1}$ denote the value-tree environment with domain $\domof{\Trees_0} \cup \domof{\Trees_1}$ coinciding with $\Trees_1$ in the domain of $\Trees_1$ and with $\Trees_0$ otherwise. $\Field_0[\Field_1]$ denotes the status field with the same domain as $\Field_0$ made of $\envmap{\deviceId}{\mapupdate{\Field_0(\deviceId)}{\Field_1(\deviceId)}}$ for all $\deviceId$ in the domain of $\Field_1$, $\envmap{\deviceId}{\Field_0(\deviceId)}$ otherwise.
 
 Rule \ruleNameSize{[N-FIR]} models a computational round at a device $\deviceId$. From the filtered local value-tree environement $\filter(\Field)(\deviceId)$ determines the single device semantics obtaining the value-tree $\vtree$ and use it to update the value-tree environment of $\deviceId$'s neighbours.
 
