--- a/src/45-comparison.tex
+++ b/src/45-comparison.tex
@@ -24,7 +24,7 @@ $
 \label{fig:fscafisyntax}
 \end{figure}
 
-The syntax of \FSCAFI is shown in figure \ref{fig:fscafisyntax}, it focus on the aggregate constructs ignoring the Scala specific features. A program $\PROGRAM$ is defined as a sequence of function declarations $\overline{\FUNCTION}$ followed by a main expression $\e$. A function declaration $\FUNCTION$ defines a (possibly recursive) function named $\fname$, with a sequence of formal parameters $\overline{\xname}$ and a body expression $\e$. An expression can be a variable $\xname$, a value $\anyvalue$, a $\mathtt{rep}$-expression $\repK(\e)\{ \e \}$ modelling time evolution, a $\mathtt{nbr}$-expression $\nbrK\{\e\}$ modelling neighbourhood interaction or a $\mathtt{foldhood}$-expression $\foldK(\e)(\e)\{\e\}$ combaining a computation against neighbours.
+The syntax of \FSCAFI is shown in figure \ref{fig:fscafisyntax}, it focus on the aggregate constructs ignoring the Scala specific features. A program $\PROGRAM$ is defined as a sequence of function declarations $\overline{\FUNCTION}$ followed by a main expression $\e$. A function declaration $\FUNCTION$ defines a (possibly recursive) function named $\fname$, with a sequence of formal parameters $\overline{\xname}$ and a body expression $\e$. An expression can be a variable $\xname$, a value $\anyvalue$, a function call $\e(\overline{\e})$ where $\e$ evaluates to a function $\funvalue$ and $\overline{\e}$ are the arguments, a $\mathtt{rep}$-expression $\repK(\e)\{ \e \}$ modelling time evolution, a $\mathtt{nbr}$-expression $\nbrK\{\e\}$ modelling neighbourhood interaction or a $\mathtt{foldhood}$-expression $\foldK(\e)(\e)\{\e\}$ combaining a computation against neighbours.
 
 A value can be either a \textit{data value} $\dc(\overline{\anyvalue})$ consisting of a \textit{data constructor} $\dc$ applied to a sequence of values $\overline{\anyvalue}$, or a \textit{function value} $\funvalue$. A function value can be the name of a built-in function $\bname$, the name of a user defined function $\fname$, or an anonymous function $(\overline{\xname}) \; \toSymKtag{\name}{\e}$ where $\overline{\xname}$ are the formal parameters, $\e$ the body of the function and $\name$ a \textit{tag} that uniquely identifies the function and doesn't occours in the source program. A built-in function can be a \textit{pure operator} like the $\mathtt{mux}$ function or mathematical operators, a \textit{sensor} which depends on the environmental conditions of the computing device, or a \textit{relational sensor} which is a sensor depending additionally on a neighbouring device which the computation is happening against.
 
