expand on future developments

--- a/src/90-future.tex
+++ b/src/90-future.tex
@@ -1,1 +1,1 @@
-The current state of the \Kotac{} implementation doesn't allows to run aggregate programs yet. The mechanisms of communication between devices and their configuration and APIs must be defined to have a fully working implementation. A rich standard library must also be defined on top of the basic operators. APIs to access the device sensors are also missing. Those missing parts will be developed as part of my PhD research project.
+The current state of the \Kotac{} implementation doesn't allows to run aggregate programs yet. The mechanisms of communication between devices and their configuration and APIs must be defined to have a fully working implementation. A rich standard library must also be defined on top of the basic operators. APIs to access the device sensors are also missing. Those missing parts will be developed as part of my PhD research project. An aggregate programming library for C++ is also currently under development for industrial applications, future versions of \Kotac{} will also provide interoperability with devices running that library.
